# data_parsers

./: .gitignore  .pylintrc  cleaner.py  dicom_parser_main.py  excel_parser_main.py  main.py  pickle_excels.py  pyproject.toml  readme.md  requirements.txt  table_merger.py  visualizer.py
config/: config.yaml
config/dataset/: train.yaml
excel/: checks.py  cleaner.py  extract_data.py  file_counter.py  global_helpers.py  path_master.py  sheets_2_tables.py  table_cleaner.py  table_merger.py  visualizer.py  workbook_2_sheets.py
excel/aha_segment/analyze/: aha_accs.ipynb  detection.py  glob_accs.ipynb  iterate.py  iterate_1.ipynb  iterate_2.ipynb  statistics.py  stats.py
excel/aha_segment/refinement/: calculate_acceleration.py  calculate_accelerations.py  rubiks_cube.py  table_condenser.py  table_merger.py
excel/analysis/: analysis.py  test.ipynb
excel/analysis/utils/: analyse_variables.py  dim_reduction.py  exploration.py  extract_data.py  helpers.py  merge_data.py  statistics.py  update_metadata.py  variate_analysis.py
excel/analyze/: iterate.ipynb  staistics.py  table_merger.py  visualizer.py
excel/other_tasks/: cleanup.py
excel/pre_processing/: checks.py  cleaner.py  pre_processing.py  sheets_2_tables.py
excel/pre_processing/utils/: checks.py  cleaner.py  helpers.py  sheets_2_tables.py  workbook_2_sheets.py
excel/refinement/: euclid_strain.py  nomralize.py  table_condenser.py  table_merger.py
