[tool.poetry]
name = "dicom_utils"
version = "0.1.0"
description = ""
authors = ["melandur <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dicom2nifti = "^2.4.2"
pydicom = "^2.3.0"
SimpleITK = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
